go back to missions/contacts/companies from these resources

--- a/ui/icons/16x16/sprites.conf
+++ b/ui/icons/16x16/sprites.conf
@@ -1,10 +1,28 @@
 images-directory = ui/icons/16x16
-sprite-output = ui/icons/16x16/sprite-admin-bar.png
-css-output = ui/icons/16x16/sprite-admin-bar.css
+sprite-output = ui/icons/16x16/sprites.png
+css-output = ui/icons/16x16/sprites.css
 
 images = "mission.png
 contact.png
-company.png"
+company.png
+bell.png
+bell_add.png
+bell_delete.png
+bell_error.png
+bell_go.png
+bell_notification.png
+project.png
+finished.png
+nogo.png
+phone.png
+mobile.png
+fax.png
+mission_go.png
+contact_go.png
+company_go.png
+mission_add.png
+contact_add.png
+company_add.png"
 
 vertical-space = 2
 space-before = 2
