import contacts from gmail contacts
Being unable to search case independant makes it unsafe to import twice

--- a/ui/icons/16x16/sprites.conf
+++ b/ui/icons/16x16/sprites.conf
@@ -22,7 +22,8 @@ contact_go.png
 company_go.png
 mission_add.png
 contact_add.png
-company_add.png"
+company_add.png
+book_addresses.png"
 
 vertical-space = 2
 space-before = 2
