--- a/sprites/icons16.conf
+++ b/sprites/icons16.conf
@@ -1,8 +1,10 @@
-images-directory = ui/icons/16x16
-sprite-output = ui/icons/16x16/sprites.png
-css-output = ui/icons/16x16/sprites.css
+images-directory = .
+sprite-output = ../ui/icons/16x16/icons16.png
+css-output = icons16.css
+css-prefix = crm16
 
-images = "mission.png
+images = "notfound.png
+mission.png
 contact.png
 company.png
 bell.png
